package com.company.Tetris.TiposPieza;

import com.company.Tetris.*;

public class Linea extends Pieza{

    public Linea() {
        super(3,new Celda(0, 0),new Celda(0, 1),new Celda(0, 2),new Celda(0, 3));
    }

}
